Travels_Web header done

--- a/Travels-Web/index.html
+++ b/Travels-Web/index.html
@@ -4,17 +4,92 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+      integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
+      crossorigin="anonymous"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lora:wght@400;500;600;700&family=Roboto:wght@100;300;400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/style.css" />
-    <title>Document</title>
+    <title>Travels</title>
   </head>
   <body>
-    <header></header>
-    <section class="carousel"></section>
+    <header class="header">
+      <div class="header__container">
+        <div class="header__left">
+          <h1>NJOY</h1>
+          <h1>TRAVELS</h1>
+        </div>
+        <div class="header__right">
+          <div class="header__right__top">
+            <div class="header__righttop__content">
+              <i class="fa fa-phone"></i>
+              <a href="tel:+84 163 4643 124" target="_blank"
+                >: +84 163 4643 124</a
+              >
+            </div>
+            <div class="header__righttop__content">
+              <i class="fa fa-envelope"></i>
+              <a href="mailto:Dangtrunghieu147@gmail.com" target="_blank"
+                >: Dangtrunghieu147@gmail.com</a
+              >
+            </div>
+          </div>
+          <div class="header__right__bottom">
+            <nav class="header__rightbottom__content">
+              <a href="#">Home</a>
+              <a href="#about">About</a>
+              <a href="#pages">Pages</a>
+              <a href="#code">Code</a>
+              <a href="#carousel">Gallery</a>
+              <a href="#contact">Contact</a>
+            </nav>
+            <div class="header__rightbottom__content">
+              <a href="https://www.google.com/" target="_blank">
+                <i class="fab fa-google-plus-g"></i>
+              </a>
+              <a href="https://www.linkedin.com/" target="_blank">
+                <i class="fab fa-linkedin-in"></i>
+              </a>
+              <a href="https://twitter.com/home?lang=en" target="_blank">
+                <i class="fab fa-twitter"></i>
+              </a>
+              <a href="https://www.facebook.com/" target="_blank">
+                <i class="fab fa-facebook-f"></i>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </header>
+
+    <section class="carousel">
+      <div class="carousel__container">
+        <p>VARIUS</p>
+        <h1>Your Holiday!</h1>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit ducimus
+          voluptatem accusamus, voluptatibus porro libero autem quaerat,
+          perspiciatis rerum molestiae fugiat. Debitis repellendus voluptatum
+          nesciunt dolor exercitationem necessitatibus sequi doloremque minima
+        </p>
+        <button>More</button>
+        <div>
+          <i class="fa fa-circle"></i>
+          <i class="fa fa-circle"></i>
+        </div>
+      </div>
+    </section>
+
     <section id="about" class="about"></section>
-    <section id="pages" class = "intro"></section>
-    <section id class="services"></section>
-    <section class="news"></section>
-    <section class="contact"></section>
-    <footer></footer>
+    <section id="code" class="services"></section>
+    <section id="pages" class="news"></section>
+    <section id="contact" class="contact"></section>
+    <footer class="footer"></footer>
   </body>
 </html>
