--- a/Travels-Web/index.html
+++ b/Travels-Web/index.html
@@ -66,27 +66,79 @@
           </div>
         </div>
       </div>
+      <a class="pushtotop" href="#">
+        <img src="./images-layout2/arrow.png" />
+      </a>
     </header>
 
     <section class="carousel">
       <div class="carousel__container">
-        <p>VARIUS</p>
-        <h1>Your Holiday!</h1>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit ducimus
-          voluptatem accusamus, voluptatibus porro libero autem quaerat,
-          perspiciatis rerum molestiae fugiat. Debitis repellendus voluptatum
-          nesciunt dolor exercitationem necessitatibus sequi doloremque minima
-        </p>
-        <button>More</button>
-        <div>
-          <i class="fa fa-circle"></i>
-          <i class="fa fa-circle"></i>
+        <div class="carousel__content">
+          <p>VARIUS</p>
+          <h1>Your Holiday!</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit
+            ducimus voluptatem accusamus, voluptatibus porro libero autem
+            quaerat, perspiciatis rerum molestiae fugiat. Debitis repellendus
+          </p>
+          <button>More</button>
+          <div class="carousel__dots">
+            <i class="fa fa-circle"></i>
+            <i class="fa fa-circle"></i>
+          </div>
         </div>
       </div>
     </section>
 
-    <section id="about" class="about"></section>
+    <section id="about" class="about">
+      <div class="about__container">
+        <h1>Welcome</h1>
+        <div class="about__list">
+          <div class="about__item">
+            <h1>Mauris in erat justo</h1>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Assumenda, sed delectus aspernatur quod dolore nobis fuga
+              similique consectetur modi est, laborum tempora voluptatibus ipsum
+              dolores at voluptatem saepe quam? Tempore.
+            </p>
+            <br />
+            <span>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eaque ex
+              incidunt animi a libero. Quo et ullam eveniet illum aperiam eos
+              minima dolor recusandae qui enim nobis maiores, tenetur expedita?
+            </span>
+            <button>More</button>
+          </div>
+          <div class="about__item">
+            <img src="./images-layout2/2.jpg" alt="" />
+          </div>
+          <div class="about__item">
+            <img src="./images-layout2/3.jpg" alt="" />
+          </div>
+          <div class="about__item">
+            <h1>Mauris in erat justo</h1>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Assumenda, sed delectus aspernatur quod dolore nobis fuga
+              similique consectetur modi est, laborum tempora voluptatibus ipsum
+              dolores at voluptatem saepe quam? Tempore.
+            </p>
+            <br />
+            <span>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eaque ex
+              incidunt animi a libero. Quo et ullam eveniet illum aperiam eos
+              minima dolor recusandae qui enim nobis maiores, tenetur expedita?
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi
+              praesentium repudiandae expedita atque quam officia. Reiciendis
+              autem, tempore soluta fugiat maxime totam nam harum! Recusandae
+              magni delectus cupiditate illo adipisci.
+            </span>
+            <button>More</button>
+          </div>
+        </div>
+      </div>
+    </section>
     <section id="code" class="services"></section>
     <section id="pages" class="news"></section>
     <section id="contact" class="contact"></section>
