Travels-Web done

--- a/Travels-Web/index.html
+++ b/Travels-Web/index.html
@@ -139,9 +139,170 @@
         </div>
       </div>
     </section>
-    <section id="code" class="services"></section>
-    <section id="pages" class="news"></section>
-    <section id="contact" class="contact"></section>
-    <footer class="footer"></footer>
+
+    <section id="code" class="services">
+      <div class="services__container">
+        <h1>SERVICES</h1>
+        <div class="services__list">
+          <div class="services__item">
+            <i class="fa fa-anchor"></i>
+            <h2>Phaseus suspict</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero
+              dolores obcaecati optio doloremque voluptatem at. Dolorum
+            </p>
+          </div>
+          <div class="services__item">
+            <i class="fa fa-comment"></i>
+            <h2>Phaseus suspict</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero
+              dolores obcaecati optio doloremque voluptatem at. Dolorum
+            </p>
+          </div>
+          <div class="services__item">
+            <i class="fa fa-heartbeat"></i>
+            <h2>Phaseus suspict</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero
+              dolores obcaecati optio doloremque voluptatem at. Dolorum
+            </p>
+          </div>
+          <div class="services__item">
+            <i class="fa fa-magnet"></i>
+            <h2>Phaseus suspict</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero
+              dolores obcaecati optio doloremque voluptatem at. Dolorum
+            </p>
+          </div>
+          <div class="services__item">
+            <i class="fa fa-heartbeat"></i>
+            <h2>Phaseus suspict</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero
+              dolores obcaecati optio doloremque voluptatem at. Dolorum
+            </p>
+          </div>
+          <div class="services__item">
+            <i class="fa fa-thumbs-up"></i>
+            <h2>Phaseus suspict</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero
+              dolores obcaecati optio doloremque voluptatem at. Dolorum
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="pages" class="news">
+      <div class="news__container">
+        <h1>NEWS</h1>
+        <div class="news__items">
+          <div class="news__left">
+            <img src="./images-layout2/4.jpg" alt="" />
+          </div>
+
+          <div class="news__right">
+            <div class="news__right__top">
+              <i class="fa fa-user"></i>
+              <span>Admin</span>
+              <i class="fa fa-calendar-alt"></i>
+              <span>May,06,2016</span>
+            </div>
+            <h1>The most beautiful beach on over the world</h1>
+            <button>More</button>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="club">
+      <div class="club__container">
+        <h1>JOIN THE CLUB</h1>
+        <form action="">
+          <input type="email" placeholder="subcribe" />
+          <button>
+            <i class="fa fa-paper-plane"></i>
+          </button>
+        </form>
+      </div>
+    </section>
+
+    <footer id="contact" class="footer">
+      <div class="footer__top">
+        <div class="footer__list">
+          <div class="footer__item">
+            <h1>History of us</h1>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat,
+              cupiditate illo explicabo reprehenderit ducimus id itaque
+              dignissimos iure ipsam amet rerum veniam tempora alias ut dolorem
+              unde fugit voluptates eligendi.
+            </p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Est
+              necessitatibus a modi consequatur sint dolor maxime dolores
+              voluptatem facilis adipisci?
+            </p>
+          </div>
+          <div class="footer__item">
+            <h1>Twitter Posts</h1>
+            <p>
+              <span>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rerum,
+                neque.
+              </span>
+              <a href="http://example.com" target="_blank"
+                >http://example.com</a
+              >
+              <span>Lorem ipsum dolor sit.</span>
+            </p>
+            <p>
+              <i class="fab fa-twitter"></i>
+              <span>02 day ago</span>
+            </p>
+            <p>
+              <span>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis,
+                minus distinctio nihil sequi aliquid consequuntur.
+              </span>
+              <a href="http://gmail.com">http://gmail.com</a>
+              <span>Lorem, ipsum dolor.</span>
+            </p>
+            <p>
+              <i class="fab fa-twitter"></i>
+              <span>03 day ago</span>
+            </p>
+          </div>
+          <div class="footer__item">
+            <h1>Events</h1>
+            <p>12 Aug <b>Cuciculum</b></p>
+            <p>12 Aug <b>Cuciculum</b></p>
+            <p>12 Aug <b>Cuciculum</b></p>
+            <p>12 Aug <b>Cuciculum</b></p>
+            <p>12 Aug <b>Cuciculum</b></p>
+          </div>
+          <div class="footer__item">
+            <h1>Navigation</h1>
+            <nav class="footer__nav">
+              <a href="#">Home</a>
+              <a href="#about">About</a>
+              <a href="#pages">Pages</a>
+              <a href="#code">Code</a>
+              <a href="#carousel">Gallery</a>
+              <a href="#contact">Contact</a>
+            </nav>
+          </div>
+        </div>
+      </div>
+      <div class="footer__bottom">
+        <div class="footer__copyright">
+          <p>@2017 Noja TRAVELS. All rights resever | Design by:</p>
+          <span>Me</span>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
